# cpp-photobook

./: .clang-format  .clang-uml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.txt  add-cpp-class.py  build-pblib-ios.sh  build-pblib-release.sh  build-pblib.bat  build-pblib.sh  build-pbtests.bat  build-shaders.bat  deep-clean.bat  deep-clean.sh  download.py  generage-lipo-commands.py  generage-lipo-commands.sh  generate-lipo-commands.py  install-prerequisites.bat  install-prerequisites.sh  main.cpp  order-between-lines.py  unzip.py  vcpkg.json
PB/: .clang-uml  CMakeLists.txt  CMakePresets.json  Config.h.in  ConfigDependants.h.in  config.h.in
PB/assets/svg-templates/: 2x1-simple.svg.template
PB/common-components/: CMakeLists.txt
PB/common-components/include/: StandardPrinter.h
PB/include/: Context.h  DataNode.h  DataTree.h  ErrorTypes.h  FileComparator.h  FileData.h  FileMapper.h  FolderData.h  GradualControllable.h  ImageReader.h  ImageSetWriter.h  LogLevel.h  MetadataReader.h  NodeData.h  PBError.h  PBLog.h  PhotoBook.h
PB/include/common/: Log.h  LogLevel.h  StandardPrinter.h
PB/include/pb/: AspectRatio.h  BasicSVGModel.h  CircularIterator.h  CollageImage.h  CollageLibraryAssistant.h  CollageMakerJob.h  CollageManager.h  CollageTemplateInfo.h  CollageTemplatesManager.h  CollageThumbnailsMakerJob.h  Command.h  Config.h  DataManager.h  DatabaseService.h  DirectoryInspectionJob.h  DirectoryInspectionService.h  DrawingService.h  DurableHashService.h  Enums.cpp  Enums.h  Error.h  ErrorTypes.h  Exportable.h  Exporter.h  FileMapper.h  FilePersistence.h  GPUAcceleratedImageOperations.h  Gallery.h  GalleryListener.h  Geometry.h  GradualControllable.h  Html.h  ImageMetadataLogic.h  ImageMonitor.h  ImageOperations.h  ImageReader.h  ImageSetWriter.h  ImageToPaperService.h  ImageToPaperTask.h  ImportFoldersLogic.h  (+51 more)
PB/include/pb/common/: Log.h  LogLevel.h  OutputConsolePrinter.h  StandardPrinter.h  WinrtStorage.h
PB/include/pb/components/: CollageLibraryAssistant.h  ImageMetadataInspector.h  ImageToPaperTask.h  ImportImageTask.h  LinesOperationsHistory.h  MapReducer.h  OGLEngine.h  Project.h  RuntimeUUID.h  SVGInflater.h  SerializationStrategy.h  Serializer.h  SkiaResources.h  TaskCruncher.h  ThumbnailsTask.h  VulkanManager.h
PB/include/pb/config/: OutputConsolePrinter.h  StandardPrinter.h
PB/include/pb/entities/: AspectRatio.h  BasicSVGModel.h  CollageImage.h  CollageTemplateInfo.h  GenericImage.h  ImageProcessingData.h  LutIconInfo.h  LutImageProcessingData.h  PaperSettings.h  ProjectMetadata.h  RegularImageV2.h  RowProcessingData.h  TextImageV2.h
PB/include/pb/export/: ExportLogic.h  ExportService.h  ExportTaskListener.h  Exportable.h  Exporter.h  Html.h  Jpg.h  Pdf.h  PdfLibharu.h  PdfPoDoFo.h
PB/include/pb/image/: Image.h  ImageFactory.h  ImageOperations.h  ImageReader.h  ImageSetWriter.h  RegularImage.h  TextImage.h  VirtualImage.h
PB/include/pb/infra/: BijectiveUnorderedMap.h  Concepts.h  Error.h  FileInfo.h  FileSupport.h  ParallelTaskConsumer.h  TSQueue.h  TaskCruncher.h  Traits.h
PB/include/pb/jobs/: CollageMakerJob.h  CollageThumbnailsMakerJob.h  DirectoryInspectionJob.h  LutIconsPreprocessingJob.h  PicturesSearchJob.h  ThumbnailsJob.h
PB/include/pb/persistence/: FilePersistence.h  Persistence.h  PersistenceService.h  PersistenceVisitor.h  ProjectDetails.h  ProjectMetadata.h  ProjectPersistence.h  ProjectSnapshot.h  SQLPersistence.h  SerializationStrategy.h
PB/include/pb/project/: PaperSettings.h  PathCache.h  Project.h  ProjectMetadata.h  ProjectSnapshot.h
PB/include/pb/services/: AzureService.h  CollageService.h  DatabaseService.h  DirectoryInspectionService.h  DrawingService.h  DurableHashService.h  EffectsService.h  ImageToPaperService.h  ImportFoldersService.h  LutService.h  (+3 more)
PB/include/util/: FileInfo.h  Thread.h  Timer.h  Traits.h
PB/pb-assets/others/: About.txt  PrivacyPolicy.txt
PB/pb-assets/shaders/: lut.glsl  vertex.glsl
PB/pb-assets/svg-templates/: 2-The-Mirror-Twins.template  2x1-simple.svg.template  4-The-Tetraforge-Brotherhood.template  5-The-Valiant-Vortex.template  5-cinque-terre.template
PB/src/: AzureService.cpp  CollageImage.cpp  CollageLibraryAssistant.cpp  CollageMakerJob.cpp  CollageManager.cpp  CollageService.cpp  CollageTemplatesManager.cpp  CollageThumbnailsMakerJob.cpp  Command.cpp  Config.cpp  ConfigDependants.cpp  DataManager.cpp  DataTree.cpp  DatabaseService.cpp  DirectoryInspectionJob.cpp  DirectoryInspectionService.cpp  DrawingService.cpp  DurableHashService.cpp  EffectsService.cpp  ExportService.cpp  FileComparator.cpp  FileData.cpp  FileMapper.cpp  FilePersistence.cpp  FileSupport.cpp  FolderData.cpp  GPUAcceleratedImageOperations.cpp  Gallery.cpp  GenericImage.cpp  GradualControllable.cpp  Html.cpp  ImageFactory.cpp  ImageMetadataInspector.cpp  ImageMetadataLogic.cpp  ImageMonitor.cpp  ImageOperations.cpp  ImageReader.cpp  ImageSetWriter.cpp  ImageToPaperService.cpp  ImageToPaperTask.cpp  (+53 more)
PB/src/infra/: FileInfo.cpp  ParallelTaskConsumer.cpp  Timer.cpp
PB/src/util/: FileInfo.cpp  ParallelTaskConsumer.cpp  SequentialTaskConsumer.cpp  Thread.cpp  Timer.cpp
PB/test-data/: generate-data.py
PB/tests/: MockListeners.cpp  MockListeners.h  TestCircularIterator.cpp  TestCollageLibraryAssistant.cpp  TestCollageService.cpp  TestComparator.cpp  TestDataManager.cpp  TestDatabaseService.cpp  TestDeserialization.cpp  TestDrawingService.cpp  TestDurableHashService.cpp  TestEffects.cpp  TestErrors.cpp  TestExiv2.cpp  TestExportService.cpp  TestFilesMap.cpp  TestFolderImport.cpp  TestGallery.cpp  TestImageMonitor.cpp  TestIteratorWithState.cpp  TestLinesOperationsHistory.cpp  TestLogLevel.cpp  TestLutService.cpp  TestMain.cpp  TestParallelTaskConsumer.cpp  TestPathCache.cpp  TestPersistence.cpp  TestPersistenceProject.cpp  TestPersistenceService.cpp  TestPhotobook.cpp  TestProjectManagementSystem.cpp  TestProjectPersistence.cpp  TestProjectSerializerService.cpp  TestRuntimeUUID.cpp  TestSequenctialTaskConsumer.cpp  TestSerializer.cpp  TestStagedImages.cpp  TestThirdPartyLinks.cpp
(+407 files in other folders)
